Update PMD version for linting

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 pmd {
     consoleOutput = true
     ruleSetFiles = files("PMDRuleSet.xml")
+    toolVersion = "6.29.0"
 }
 
 test {
