--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation('net.sourceforge.pmd:pmd-java:6.29.0')
     implementation('info.picocli:picocli:4.5.2')
     implementation('com.opencsv:opencsv:5.2')
+    implementation("com.google.guava:guava:30.1-jre")
 
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
